--- a/vignettes/read_USGS_functions.Rmd
+++ b/vignettes/read_USGS_functions.Rmd
@@ -58,7 +58,7 @@ nrow(dv_legacy)
 dv_modern <- read_USGS_dv(monitoring_location_id = "USGS-01491000",
                           parameter_code = c("00060", "00010"),
                           statistic_id = "00003",
-                          datetime = c("2023-01-01", "2025-05-06"))
+                          time = c("2023-01-01", "2025-05-06"))
 
 nrow(dv_modern)
 ```
@@ -88,7 +88,7 @@ dv_2 <- read_USGS_dv(monitoring_location_id = "USGS-01491000",
                                     "value",
                                     "time"),
                      statistic_id = "00003",
-                     datetime = c("2022-10-01", "2023-10-01"))
+                     time = c("2022-10-01", "2023-10-01"))
 head(dv_2)
 ```
 
