--- a/vignettes/read_USGS_functions.Rmd
+++ b/vignettes/read_USGS_functions.Rmd
@@ -42,7 +42,7 @@ This is a modern access point for USGS data. The USGS is planning to modernize a
 
 To access these services on a web browser, go to <https://api.waterdata.usgs.gov/ogcapi/v0/collections/daily>.
 
-The `read_USGS_dv` function will eventually replace the `readNWISdv` function. Generally, both functions look pretty similar:
+The `read_USGS_daily` function will eventually replace the `readNWISdv` function. Generally, both functions look pretty similar:
 
 ```{r}
 library(dataRetrieval)
@@ -55,7 +55,7 @@ dv_legacy <- readNWISdv(siteNumbers = "01491000",
 
 nrow(dv_legacy)
 
-dv_modern <- read_USGS_dv(monitoring_location_id = "USGS-01491000",
+dv_modern <- read_USGS_daily(monitoring_location_id = "USGS-01491000",
                           parameter_code = c("00060", "00010"),
                           statistic_id = "00003",
                           time = c("2023-01-01", "2025-05-06"))
@@ -82,7 +82,7 @@ ggplot(data = dv_modern) +
 * Flexible column selection:
 
 ```{r}
-dv_2 <- read_USGS_dv(monitoring_location_id = "USGS-01491000",
+dv_2 <- read_USGS_daily(monitoring_location_id = "USGS-01491000",
                      parameter_code = c("00060"),
                      properties = c("monitoring_location_id",
                                     "value",
@@ -92,7 +92,7 @@ dv_2 <- read_USGS_dv(monitoring_location_id = "USGS-01491000",
 head(dv_2)
 ```
 
-* When you look at the help file for the new function `?read_USGS_dv`, you'll also notice there are many more arguments. These are mostly set by default to NA. You DO NOT need to specify all of these parameters.
+* When you look at the help file for the new function `?read_USGS_daily`, you'll also notice there are many more arguments. These are mostly set by default to NA. You DO NOT need to specify all of these parameters.
 
 * Flexible data/last_modified
 
@@ -140,7 +140,7 @@ knitr::kable(data_modern[,c("parameter_code",
 
 # Site Information
 
-The `read_USGS_sites` function will eventually replace the `readNWISsite` function. Generally, both functions look pretty similar:
+The `read_USGS_monitoring_location` function will eventually replace the `readNWISsite` function. Generally, both functions look pretty similar:
 
 ```{r}
 sites_legacy <- readNWISsite(siteNumbers = "01491000")
@@ -148,7 +148,7 @@ names(sites_legacy)
 ```
 
 ```{r}
-sites_modern <- read_USGS_sites(monitoring_location_id = "USGS-01491000")
+sites_modern <- read_USGS_monitoring_location(monitoring_location_id = "USGS-01491000")
 names(sites_modern)
 
 ```
